--- a/package.json
+++ b/package.json
@@ -15,12 +15,12 @@
     "chai-as-promised": "7.1.1",
     "chai-bignumber": "3.0.0",
     "identicon.js": "^2.3.3",
-    "ipfs-http-client": "^33.1.1",
+    "ipfs-http-client": "^49.0.2",
     "react": "16.8.4",
-    "react-bootstrap": "1.0.0-beta.5",
+    "react-bootstrap": "^1.5.0",
     "react-dom": "16.8.4",
-    "react-scripts": "2.1.3",
-    "truffle": "5.0.5",
+    "react-scripts": "^2.0.5",
+    "truffle": "^5.1.66",
     "web3": "1.0.0-beta.55"
   },
   "homepage": "http://dappuniversity.github.io/decentragram",
